# verti

./: 2025-seeds.csv  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: companion_plants.json  garden_beds.json  planting_progress.json  planting_rules.json
data/harvests/: 2025_harvest.csv
data/progress/: 2025_progress.json  2026_progress.json
data/seeds/: 2025-seeds.csv  2026-seeds.csv
pages/: 1_🗓️_Planting_Schedule.py  2_🌿_Garden_Planner.py  3_📊_Database_Manager.py  4_🤝_Companion_Plants.py  5_📈_Analytics.py
utils/: __init__.py  helpers.py
